--- a/learning/own_model_test.ipynb
+++ b/learning/own_model_test.ipynb
@@ -756,7 +756,13 @@
     "from sklearn.metrics import mean_absolute_error\n",
     "y_preds = model.predict(x_test)\n",
     "mea = mean_absolute_error(y_test,y_preds)\n",
-    "mea"
+    "mea\n",
+    "for i in range(0,10):\n",
+    "    print(f\"Actual value : {y_test[i]} Predicted value : {y_preds[i]}\")\n",
+    "\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.import mean_absolute_error\n",
+    "y_preds = model.predict(x_test) "
    ]
   },
   {
@@ -1287,13 +1293,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
-    "np.random.seed(42)\n",
-    "x = he"
-   ]
+   "source": []
   }
  ],
  "metadata": {
