--- a/learning/pandas.ipynb
+++ b/learning/pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "d49bd73f-d843-4b81-a860-d8c264ac7bad",
    "metadata": {},
    "outputs": [
@@ -15,7 +15,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a89bda60-a03d-4ad4-b4ae-f454c101f61d",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ee497c9d-6c81-4121-b805-a6a23ffdc0c8",
    "metadata": {},
    "outputs": [
@@ -90,19 +90,19 @@
        "      <th>0</th>\n",
        "      <td>BMW</td>\n",
        "      <td>Red</td>\n",
-       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Toyota</td>\n",
        "      <td>Blue</td>\n",
-       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Honda</td>\n",
        "      <td>White</td>\n",
-       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -110,12 +110,12 @@
       ],
       "text/plain": [
        "  Car make Colour  numbers\n",
-       "0      BMW    Red        5\n",
-       "1   Toyota   Blue        5\n",
-       "2    Honda  White        5"
+       "0      BMW    Red        4\n",
+       "1   Toyota   Blue        4\n",
+       "2    Honda  White        4"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2006,7 +2006,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2020,7 +2020,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
